# voxel-usd-plugin

./: README.md  meson.build  meson.options
examples/: README.md  cacodemon.kvx
usdVoxel/: SdfMagicaVoxel.cpp  SdfMagicaVoxel.h  UsdVoxelKvxFileFormat.cpp  UsdVoxelVoxFileFormat.cpp  cubePlacers.h  kvx.h  meson.build  ogt_vox.cpp  plugInfo.json
usdmeson/: README.md  meson.build  pymodule_genfiles.py
